--- a/stack-queue/pom.xml
+++ b/stack-queue/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.shine</groupId>
-    <artifactId>queue</artifactId>
+    <artifactId>stack-queue</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
