--- a/greedy-algo/pom.xml
+++ b/greedy-algo/pom.xml
@@ -18,6 +18,12 @@
             <artifactId>junit</artifactId>
             <version>4.11</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.9</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
