--- a/dynamic-pro/pom.xml
+++ b/dynamic-pro/pom.xml
@@ -2,9 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>algo</artifactId>
+        <groupId>com.shine</groupId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>com.shine</groupId>
     <artifactId>dynamic-pro</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
@@ -16,7 +19,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
         </dependency>
     </dependencies>
 
